# llm-battle

./: LICENSE  README.md  main.py  pyproject.toml
outputs/: result.csv  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(同じ|異なる)_claude-sonnet-4-5_gemini-3-pro-preview.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(同じ|異なる)_claude-sonnet-4-5_gpt-5.1.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(同じ|異なる)_gemini-3-pro-preview_claude-sonnet-4-5.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(同じ|異なる)_gemini-3-pro-preview_gpt-5.1.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(同じ|異なる)_gpt-5.1_claude-sonnet-4-5.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(同じ|異なる)_gpt-5.1_gemini-3-pro-preview.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(異なる|同じ)_claude-sonnet-4-5_gemini-3-pro-preview.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(異なる|同じ)_claude-sonnet-4-5_gpt-5.1.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(異なる|同じ)_gemini-3-pro-preview_claude-sonnet-4-5.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(異なる|同じ)_gemini-3-pro-preview_gpt-5.1.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(異なる|同じ)_gpt-5.1_claude-sonnet-4-5.md  「テセウスの船」（部品が全て入れ替わった船は元の船と同じか？）_(異なる|同じ)_gpt-5.1_gemini-3-pro-preview.md  人間の本質は『善』か『悪（利己的）』か_(善|悪)_claude-sonnet-4-5_gemini-3-pro-preview.md  人間の本質は『善』か『悪（利己的）』か_(善|悪)_claude-sonnet-4-5_gpt-5.1.md  人間の本質は『善』か『悪（利己的）』か_(善|悪)_gemini-3-pro-preview_claude-sonnet-4-5.md  人間の本質は『善』か『悪（利己的）』か_(善|悪)_gemini-3-pro-preview_gpt-5.1.md  人間の本質は『善』か『悪（利己的）』か_(善|悪)_gpt-5.1_claude-sonnet-4-5.md  人間の本質は『善』か『悪（利己的）』か_(善|悪)_gpt-5.1_gemini-3-pro-preview.md  人間の本質は『善』か『悪（利己的）』か_(悪|善)_claude-sonnet-4-5_gemini-3-pro-preview.md  人間の本質は『善』か『悪（利己的）』か_(悪|善)_claude-sonnet-4-5_gpt-5.1.md  (+28 more)
